<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovieDetailsActivity">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/ct_backdrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing"
        android:layout_marginTop="@dimen/item_backdrop_height">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <android.support.v7.widget.CardView
                android:id="@+id/cv_movie_description_holder"
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp">


                <RelativeLayout
                    android:id="@+id/rl_movie_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv_poster"
                        style="@style/MovieDetailPoster"
                        tools:ignore="ContentDescription" />

                    <RelativeLayout
                        style="@style/MovieDetailsHolder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toEndOf="@id/iv_poster">

                        <TextView
                            android:id="@+id/tv_title"
                            style="@style/MovieDetailTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="@string/movie_title_default" />

                        <TextView
                            android:id="@+id/tv_genres"
                            style="@style/MovieDetailRatings"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_title"
                            tools:text="@string/movie_genres_default" />

                        <TextView
                            android:id="@+id/tv_release_date"
                            style="@style/MovieDetailReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/tv_genres"
                            tools:text="@string/movie_release_default" />
                    </RelativeLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/CardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_movie_description_holder"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/rl_movie_details"
                    android:layout_marginBottom="@dimen/half_spacing"
                    android:layout_marginLeft="@dimen/spacing"
                    android:layout_marginRight="@dimen/spacing"
                    android:layout_marginTop="@dimen/half_spacing">

                    <TextView
                        android:id="@+id/tv_description"
                        style="@style/RecyclerViewTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_description" />

                    <View
                        android:id="@+id/divider"
                        style="@style/Divider"
                        android:layout_below="@id/tv_description" />

                    <TextView
                        android:id="@+id/tv_plot"
                        style="@style/MovieDetailPlot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/divider" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
